# playwait

./: .gitignore  README.md  pyproject.toml
.cursor/skills/playwait-setup/: SKILL.md
.github/workflows/: ci.yml
docs/plans/: 2026-07-15-001-feat-playwait-plan.md
hooks/: on-permission-done.sh  on-permission-mcp.sh  on-permission-shell.sh  on-stop.sh  on-submit.sh
src/playwait/: __init__.py  __main__.py  actions.py  cli.py  config.py  effort.py  permission.py  service.py  state.py  watchers.py
tests/: test_actions.py  test_awaiting.py  test_cooldown.py  test_effort.py  test_permission.py  test_state.py
